cmake_minimum_required(VERSION 3.21)
project(Calendar)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_EXE_LINKER_FLAGS "-static")

add_executable(Calendar main.cpp DATE.cpp DATE.h TIME.cpp TIME.h COLUMNBASE.cpp COLUMNBASE.h COLUMN.cpp COLUMN.hpp COLUMNINT.cpp COLUMNINT.h COLUMNFLOAT.cpp COLUMNFLOAT.h COLUMNCHAR.cpp COLUMNCHAR.h COLUMNBOOL.cpp COLUMNBOOL.h COLUMNDATE.cpp COLUMNDATE.h COLUMNTIME.cpp COLUMNTIME.h Utils.hpp TABLE.cpp TABLE.h COLUMNTEXT.cpp COLUMNTEXT.h DATABASE.cpp DATABASE.h INT.cpp INT.h FLOAT.cpp FLOAT.h CHAR.cpp CHAR.h)
