cmake_minimum_required(VERSION 3.0.0)
project(Calendar VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(Calendar main.cpp DATE.cpp DATE.h TIME.cpp TIME.h COLUMNBASE.cpp COLUMNBASE.h COLUMN.cpp COLUMN.hpp COLUMNINT.cpp COLUMNINT.h COLUMNFLOAT.cpp COLUMNFLOAT.h COLUMNCHAR.cpp COLUMNCHAR.h COLUMNBOOL.cpp COLUMNBOOL.h COLUMNDATE.cpp COLUMNDATE.h COLUMNTIME.cpp COLUMNTIME.h Utils.hpp TABLE.cpp TABLE.h COLUMNTEXT.cpp COLUMNTEXT.h DATABASE.cpp DATABASE.h INT.cpp INT.h FLOAT.cpp FLOAT.h CHAR.cpp CHAR.h)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
